--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bulma": "^0.9.3",
     "react": "^17.0.2",
+    "react-bulma-components": "4.0.7",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.43.2",
